<resources>
    <string name="app_name">E@</string>
    <string name="action_settings">Settings</string>
    <string name="label_name">Event Name:</string>
    <string name="label_address">Description:</string>
    <string name="label_save">Save</string>
    <string name="label_type">Type:</string>
    <string name="label_Charity">Charity</string>
    <string name="label_Nightlife">Nightlife</string>
    <string name="label_Geeks">Geeks</string>
    <string name="label_Kids">Kids</string>
    <string name="label_Sports">Sports</string>
    <string name="label_Parties">Parties</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Items</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

</resources>
